<resources>
<string name="app_name">爱城市</string>
<string name="start_city">开始智慧城市之旅</string>
<string name="os_type">1</string>
<string name="os_name">android</string>
<string name="city_change">切换城市</string>
<string name="city_title">当前城市%1$s</string>
<string name="city_title_default">选择城市</string>
<string name="city_search_hint">搜索城市名称···</string>
<string name="city_letter_choice">A-Z</string>
<string name="city_letter_all">全部</string>
<string name="city_change_ing">正在加载城市信息&#8230;</string>
<string name="city_buiding">当前城市尚未开通，敬请期待！</string>
<string name="city_load_fail">城市列表加载失败，点此重新加载。</string>
<string name="city_search_result">搜索结果</string>
<string name="current_city_do_not_click">您已经在%s,请选择其他城市。</string>
<string name="current_location_city">当前定位城市</string>
<string name="loc_citychanged_tips">系统定位您在%1$s，是否切换？</string>
<string name="loc_citychanged_error">切换到定位城市失败</string>
<string name="net_error">网络异常，请检查网络设置</string>
<string name="net_warn">网络连接不可用</string>
<string name="net_warn_desc1">未能连接到互联网</string>
<string name="net_warn_desc2">您的设备未启用移动网络或Wi-Fi网络</string>
<string name="net_warn_not_connected">如需要连接到互联网，请参考以下几点：</string>
<string name="net_warn_not_connected_tip1">检查手机的Wi-Fi设置，查看是否有可接入的Wi-Fi信号。</string>
<string name="net_warn_not_connected_tip2">检查手机是否已接入移动网络，并且手机未停机。</string>
<string name="net_warn_wifi">如果您已接入Wi-Fi网络：</string>
<string name="net_warn_wifi_tip1">请检查您所连接的Wi-Fi特点是否已接入互联网，或该热点是否允许您的设备访问互联网。</string>
<string name="home_name">主页</string>
<string name="home_register">注册</string>
<string name="home_login">登录</string>
<string name="home_fav">收藏</string>
<string name="home_seach">搜索</string>
<string name="home_setting">设置</string>
<string name="home_widget_error">获取数据失败，点击重新加载&#8230;</string>
<string name="home_logining">自动登录中&#8230;</string>
<string name="home_please_login">请登录</string>
<string name="home_hot">热门</string>
<string name="home_weather">%1$s~%2$s</string>
<string name="home_weather_refresh_sucess">刷新成功</string>
<string name="home_weather_refresh_fail">刷新成功</string>
<string name="home_weather_fail">天气加载失败</string>
<string name="home_weather_fail_renew">点击刷新天气</string>
<string name="home_weather_loading">天气加载中&#8230;</string>
<string name="home_weather_net_error">网络异常</string>
<string name="home_weather_unit">°C</string>
<string name="home_weather_yesterday">比昨天%1$s%2$s°</string>
<string name="home_weather_yesterday_no_change">与昨天温度相同</string>
<string name="home_weather_aqi">空气质量</string>
<string name="person_center_user_center">个人中心</string>
<string name="person_center_sign_in">签到</string>
<string name="person_center_sign_in_already">已签到</string>
<string name="person_center_my_relevance">我的帐户</string>
<string name="person_center_my_notice">我的消息</string>
<string name="person_center_credit_and_level">积分规则</string>
<string name="person_center_account_tip">(%1$s)</string>
<string name="person_center_urban_foot_print">城市历程</string>
<string name="person_center_change_password">修改密码</string>
<string name="person_center_change_information">编辑</string>
<string name="person_center_change_nickname">修改用户名</string>
<string name="person_center_set_head">修改头像 </string>
<string name="person_center_eixt">退出登录</string>
<string name="person_center_level">等级：%1$s（%2$s/%3$s）</string>
<string name="person_center_level_new">等级：%1$s</string>
<string name="person_center_balance"> 余额 %1$s元</string>
<string name="person_center_sign_succeed">签到成功</string>
<string name="person_center_sign_fail">签到失败</string>
<string name="person_center_up_head">上传头像中&#8230;</string>
<string name="user_headphoto_name">/user_head.jpg</string>
<string name="refresh_data">获取个人中心数据....</string>
<string name="refresh_data_fail">获取个人中心数据失败</string>
<string name="update_head_fail">图片传失败</string>
<string name="update_head_succeed">图片传成功</string>
<string name="change_susseed">修改成功</string>
<string name="change_fail">修改失败</string>
<string name="done_fail">操作失败</string>
<string name="notnotice">没有你消息</string>
<string name="person_center_clear_notice">清空</string>
<string name="person_center_del_notice">删除</string>
<string name="preson_center_not_edit">对不起，你没有可编辑的数据</string>
<string name="person_center_time">%1$s-%2$s%3$s</string>
<string name="person_center_can_relevance">添加/删除账户</string>
<string name="person_center_no_data_can_relevance">您暂未添加任何账单数据</string>
<string name="person_center_my_aixiu">我的来电秀</string>
<string name="person_center_receive_calls_free">接听电话免费秀不停</string>
<string name="person_center_change_name">修改昵称</string>
<string name="person_center_change_name_save">确定</string>
<string name="person_center_change_name_hint">请输入新昵称</string>
<string name="person_center_change_name_input_diff_name">新昵称与原昵称相同，请输入不同的昵称</string>
<string name="person_center_change_name_net_fail">修改昵称失败，请检查网络连接</string>
<string name="person_center_change_name_too_long">昵称过长，请小于6个字</string>
<string name="person_center_change_mobile">修改手机号</string>
<string name="person_center_oldpsw">请输入旧密码</string>
<string name="person_center_newpsw">请输入新密码</string>
<string name="person_center_retrypsw">再次输入密码</string>
<string name="person_center_psw_wrong">密码错误</string>
<string name="person_center_psw_empty">密码不能为空</string>
<string name="person_center_retry_psw_empty">再次输入密码不能为空</string>
<string name="person_center_psw_nosame">两次输入密码不一致</string>
<string name="person_center_pwd_valid">新密码(最长20位字母或数字)</string>
<string name="login_mobile">手机号码</string>
<string name="login_password">密码</string>
<string name="login_forget_password"><u>忘记密码</u></string>
<string name="login_get_password">获取密码</string>
<string name="login_find_password">找回密码</string>
<string name="login_mobile_empty">手机号不能为空</string>
<string name="login_not_mobile_number">请输入正确的手机号码</string>
<string name="login_password_empty">密码不能为空</string>
<string name="login_success">登录成功</string>
<string name="login_process">正在登录&#8230;</string>
<string name="login_no_account">该账户不存在</string>
<string name="login_login_failed">登录失败,密码错误</string>
<string name="login_os_wrong">系统异常</string>
<string name="login_mobile_error">请输入正确的手机号码</string>
<string name="login_error">登录失败,请稍后再试</string>
<string name="login_remember_password">记住密码</string>
<string name="forget_get_password_success">密码已发送至注册手机</string>
<string name="forget_get_password_fail">获取密码失败</string>
<string name="forget_mobile_empty">手机号不能为空</string>
<string name="forget_mobile_error">请输入正确的手机号码</string>
<string name="forget_password_get">正在获取密码，请稍后&#8230;</string>
<string name="register_get_verifyCode">获取验证码</string>
<string name="register_repeat_get_verify">重新获取验证码</string>
<string name="register_verifyCode">验证码</string>
<string name="register_nickname">昵称</string>
<string name="register_password">密码</string>
<string name="register_password_again">再次输入密码</string>
<string name="register_email">邮箱</string>
<string name="register_invitation">邀请码(选填)</string>
<string name="register_tip1">为确保获取正确的验证码,请输入真实的手机号</string>
<string name="register_tip2">验证码已发送，60s后可重新获取</string>
<string name="register_get_verify_running">正在获取验证码&#8230;</string>
<string name="register_get_verify_code_success">获取验证码成功</string>
<string name="register_get_verify_code_fail">获取验证码失败</string>
<string name="register_mobile_empty">手机号不能为空</string>
<string name="register_mobile_error">请输入正确的手机号码</string>
<string name="register_verify_code_empty">请输入验证码</string>
<string name="register_password_empty">密码不能为空</string>
<string name="register_password_valid">密码最长20位，包含字母或数字</string>
<string name="register_password_not_equal">两次输入密码不一致</string>
<string name="register_nickname_empty">昵称不能为空</string>
<string name="register_nickname_valid">请输入字母数字或汉字</string>
<string name="register_running">正在注册&#8230;</string>
<string name="register_success">注册成功</string>
<string name="register_fail">注册失败,请稍后再试</string>
<string name="register_get_verifycode_again">重新获取验证码</string>
<string name="personinfo_fill_info">完善个人资料</string>
<string name="personinfo_add_headphoto">请您添加头像</string>
<string name="personinfo_tips">跳过,直接进入应用</string>
<string name="personinfo_update_fail">更改用户信息失败</string>
<string name="personinfo_upload_fail">头像上传失败</string>
<string name="personinfo_uploding">正在上传头像&#8230;</string>
<string name="personinfo_img_empty">请先选择一张图片</string>
<string name="web_page_no_find">您的连接访问失败</string>
<string name="web_image_upload_success">文件上传成功</string>
<string name="web_image_upload_fail">文件上传失败</string>
<string name="web_image_uping">图片上传中&#8230;</string>
<string name="sure_up_load">确定要上传图片吗？</string>
<string name="web_share">分享</string>
<string name="web_error">截屏报错</string>
<string name="category_default_msg">我正在使用“%1$s”，@无线长春高速路况分享给您。大家帮大家，方便你我他</string>
<string name="category_default_url">http://www.ccradio.cn/node_1154.shtml</string>
<string name="category_share_msg">我正在使用“%1$s”，%2$s</string>
<string name="web_collect">添加到我的收藏</string>
<string name="web_collect_successed">收藏成功</string>
<string name="web_collect_is_exist">该应用已收藏</string>
<string name="web_collect_faild">收藏失败</string>
<string name="web_collecting">收藏中</string>
<string name="web_cuting">截取中</string>
    <string name="web_no_find">无法打开此协议</string>
<string name="setting">设置</string>
<string name="setting_home">首页设置</string>
<string name="setting_my_application">我的应用</string>
<string name="setting_push">推送设置</string>
<string name="setting_change_bg">首页背景</string>
<string name="setting_download">下载管理</string>
<string name="setting_video">视频设置</string>
<string name="setting_change_succes">修改成功</string>
<string name="home_bg_local_pic">本地图片</string>
<string name="home_bg_camera">拍照</string>
<string name="home_bg_icity">使用爱城市精选图片</string>
<string name="home_bg_get_more">获取更多图片</string>
<string name="home_bg_default">默认背景</string>
<string name="feedback_default_reply">\u0020感谢您的反馈！意见处理中，请稍候&#8230;</string>
<string name="setting_feedback">意见反馈</string>
<string name="feedback_content_hint">请填写您的问题和建议</string>
<string name="feedback_submit">发送</string>
<string name="feedback_sent_progress">正在提交中,请稍等···</string>
<string name="feedback_conversations">反馈信息</string>
<string name="notification">消息推送</string>
<string name="setting_share">分享</string>
<string name="umeng_share_auth_setting_unauthtip">未授权</string>
<string name="umeng_share_auth_delete_msg">确认解除授权吗?</string>
<string name="setting_bing_umeng_account">绑定账号</string>
<string name="setting_bind_binded">已绑定</string>
<string name="setting_bind_tips">绑定后可分享或同步内容</string>
<string name="setting_bind_exe">绑定异常</string>
<string name="setting_bind_error">绑定错误</string>
<string name="setting_bind_cancle_title">取消绑定</string>
<string name="setting_cancle_msg">取消后无法同步或分享内容</string>
<string name="setting_confirm_msg">绑定后可同步或分享内容</string>
<string name="setting_about">关于</string>
<string name="setting_3g">3G流量提醒</string>
<string name="setting_clear_cache">清除缓存</string>
<string name="setting_faq">FAQ</string>
<string name="push_setting">推送设置</string>
<string name="dnd_setting">免打扰</string>
<string name="sound_setting">声音</string>
<string name="shake_setting">震动</string>
<string name="notify_apllication_setting">已开启推送消息的应用</string>
<string name="watercost_setting">水费</string>
<string name="notification_settings_timeinterval">夜间免打扰时间：23:00&#8211;07:00</string>
<string name="share">分享有礼</string>
<string name="share_describe">将智慧城市分享给您的好友，同时短信分享会有机会获得话费奖励</string>
<string name="share_hint">温馨提示：</string>
<string name="icity_about">“无线长春”是由长春广播电视台重点打造的综合服务类城市应用客户端，功能覆盖市民生活方方面面。最新鲜的资讯，最及时的广播电视节目，最贴心的出行服务，还有更多专享优惠服务，尽在“无线长春”，让我们做您的“万能口袋”。</string>
<string name="about_version">版本 : %1$s</string>
<string name="check_update">检查更新</string>
<string name="free_statement">免责声明</string>
<string name="icity_envir">适用环境: android 2.2 以上</string>
<string name="icity_address">官方网址: http://t.cn/zWk3y6d</string>
<string name="icity_qq">客服 Q Q: 1747377008</string>
<string name="icity_email">邮件 : i-city@189.cn</string>
<string name="icity_version_disp">信息版权说明</string>
<string name="icity_com1">中国电信</string>
<string name="icity_com2">中国电信北京研究院</string>
<string name="icity_com3">福建讯盟软件有限公司</string>
</resources>