<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ffcs_about_line"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <!-- android:background="@drawable/bg_city" -->

    <include layout="@layout/top" />

    <include layout="@layout/top_shadow" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:layout_marginTop="10dip"
                android:text="@string/icity_about"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/icity_version"
                    style="@style/gray_title.20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/about_version" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/check_version"
                        style="@style/white_title.16sp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pink_button_selector"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dip"
                        android:paddingTop="10dip"
                        android:text="@string/check_update" />
                    <!-- android:background="@drawable/btn_yellow_selector" -->

                    <ProgressBar
                        android:id="@+id/check_version_status"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                style="@style/gray_title.16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/icity_envir" />

            <TextView
                style="@style/gray_title.16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:autoLink="web"
                android:text="@string/icity_address" />

            <TextView
                style="@style/gray_title.16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/icity_qq"
                android:visibility="gone" />

            <TextView
                style="@style/gray_title.16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:autoLink="email"
                android:text="@string/icity_email"
                android:visibility="gone" />

            <Button
                android:id="@+id/version_dis"
                style="@style/white_title.16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/pink_button_selector"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/icity_version_disp" />
            <!-- android:background="@drawable/btn_blue_selector" -->

            <LinearLayout
                android:id="@+id/company_line"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dip"
                    android:text="@string/icity_com1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dip"
                    android:text="@string/icity_com2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/icity_com3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>