<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ffcs_about_line"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- android:background="@drawable/bg_city" -->

    <include layout="@layout/top" />

    <include layout="@layout/top_shadow" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingLeft="24dip"
            android:paddingRight="24dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp" >

                <ImageButton
                    android:id="@+id/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" />
            </RelativeLayout>

            <TextView
                android:id="@+id/icity_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/about_version"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/icity_envir"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:text="@string/icity_address"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/icity_qq"
                android:textColor="#333333"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/icity_email"
                android:textColor="#333333"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" >

                <Button
                    android:id="@+id/check_version"
                    style="@style/white_title.16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pink_button_selector_small"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingBottom="10dip"
                    android:layout_alignParentLeft="true"
                    android:paddingTop="10dip"
                    android:text="@string/check_update" />
                <!-- android:background="@drawable/btn_yellow_selector" -->
                
                <Button
                    android:id="@+id/free_statement"
                    style="@style/white_title.16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pink_button_selector_small"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip"
                    android:layout_alignParentRight="true"
                    android:text="@string/free_statement" />

				

                <ProgressBar
                    android:id="@+id/check_version_status"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/version_dis"
                style="@style/white_title.16sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/pink_button_selector"
                android:paddingBottom="15dip"
                android:paddingTop="15dip"
                android:text="@string/icity_version_disp"
                android:visibility="gone" />
            <!-- android:background="@drawable/btn_blue_selector" -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/icity_about"
                android:visibility="gone"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:lineSpacingExtra="6dp"
                android:textColor="#333333"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/company_line"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dip"
                    android:text="@string/icity_com1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dip"
                    android:text="@string/icity_com2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/icity_com3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>